# AdventOfCode2025

./: .gitignore  .rustfmt.toml  Cargo.toml
aoc_2025_hardcaml/: .gitignore  dune-project
aoc_2025_hardcaml/lib/: day3.ml  day3.mli  dune
aoc_2025_hardcaml/test/: dune  test_day3.ml  test_range_finder.ml
aoc_2025_ocaml/: dune-project
aoc_2025_ocaml/lib/: dune
aoc_2025_ocaml/test/: dune
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
