[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
parse-display = "0.10"
itertools = "0.10"
regex = "1.7"
permutation = "0.4"
smallvec = "1.10"
vec-drain-where = "1.0"
bitvec = "1.0"
crypto = "0.5.1"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
pretty_assertions = "0.6"

[lib]
bench = false

[profile.release]
debug = false
